<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_1d_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_title"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_label_1d"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_1d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_map_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_label_1d_title"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1234" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_map_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_label_1d_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_observation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/observation_title"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_map_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_observation_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_observation_title"
            tools:text="@string/label_lorem_ipsum" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>